# ofek_and_sagi

./: .gitignore  README.md  main.py  my_project.code-workspace  pyproject.toml  requirements.txt  stoke_report.docx  ~$oke_report.docx
model_output/: classification_report.csv
src/: data_analysis.py  data_analysis2.py  data_cleaning.py  data_visualization.py  model_tree.py
tests/: test_data_analysis.py  test_data_cleaning.py  test_main.py  test_model_tree.py
